Fix admin columns block gap preview

--- a/assets/unminified/css/gutenberg/editor.css
+++ b/assets/unminified/css/gutenberg/editor.css
@@ -1969,6 +1969,7 @@
 
 .wp-block-columns {
   margin-bottom: 0;
+  gap: var(--wp--style--block-gap, 0);
 }
 .wp-block-columns.has-background {
   padding: 5px;
@@ -1994,7 +1995,7 @@
   flex: 1 0 0%;
 }
 .wp-block-columns > .wp-block-column:not(:first-child) {
-  margin: 0;
+  margin-left: 0;
 }
 .wp-block-columns > .wp-block-column[class*=col-] {
   flex-grow: 0;
